@@ -1,4 +1,4 @@
-.TH SG_RESET_WP "8" "June 2014" "sg3_utils\-1.39" SG3_UTILS
+.TH SG_RESET_WP "8" "October 2014" "sg3_utils\-1.40" SG3_UTILS
 .SH NAME
 sg_reset_wp \- send SCSI RESET WRITE POINTER command
 .SH SYNOPSIS
@@ -9,7 +9,7 @@ sg_reset_wp \- send SCSI RESET WRITE POINTER command
 .\" Add any additional description here
 .PP
 Sends a SCSI RESET WRITE POINTER command to the \fIDEVICE\fR. This command
-is found in the ZBC draft standard whose most recent revision is 1a.
+is found in the ZBC draft standard revision 1c (zbc\-r01c.pdf).
 .SH OPTIONS
 Arguments to long options are mandatory for short options as well.
 .TP
