@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.40 [20141024] [svn: r617]
+Changelog for sg3_utils-1.40 [20141028] [svn: r618]
   - sg_write_verify: new utility for WRITE AND VERIFY
   - sg_ses_microcode: new utility
   - sg_senddiag: add --maxlen= option
@@ -17,6 +17,7 @@ Changelog for sg3_utils-1.40 [20141024] [svn: r617]
     - more TPC VPD page decoding
   - sg_ses: fix problem with --index=sse (and ssc)
     - mask status element before using as control
+    - defeat previous item with --mask (ignore) option
     - SAS connector status element: add overcurrent bit
     - handle element descriptor names that count a
       trailing NULL
@@ -24,6 +25,7 @@ Changelog for sg3_utils-1.40 [20141024] [svn: r617]
     - add optional descriptions to -ee output
   - sg_sanitize: add --desc and --zero options
     - output unit serial number and LU name prior to
+  - sg_rep_zones: corrections, sync with zbc-r01c
   - sg_persist: split help into two pages, '-hh' for 2nd
   - sg_logs: refine tape drive output
   - sg_raw: with -vvv decode T10 CDB name
